--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.19MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.25MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.40MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.54MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-447.1KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-2.04MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.03MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇰🇷 韩国-3.58MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-7.17MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-450.1KB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
+  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.11MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-6.36MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.10MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-345.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇯🇵 日本-20.77MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-447.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-450.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.77MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-447.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-450.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.77MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-447.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-450.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.77MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-450.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-447.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-447.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-450.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.77MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-447.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-450.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.77MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-447.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-450.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.77MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-447.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-450.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.77MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
