--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.65MB/s(Youtube:不良林), server: mc.vpshax.ml, port: 443, type: trojan, password: 48ac743a-2d49-4191-b804-0c7fa7e01146, sni: mc.vpshax.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.34MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.90MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-511.7KB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 44041, type: ss, cipher: chacha20-ietf-poly1305, password: 297545c2-a59d-4610-9580-a7baa3657a57}
-  - {name: 🇨🇳 中国-9.98MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇭🇰 香港-3.98MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.04MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-4.94MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.03MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.10MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-21.11MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.35MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.26MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
