--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-3.98MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-10.03MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.10MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-21.11MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.35MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.26MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.44MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.07MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.76MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: mc.vpshax.ml, port: 443, type: vmess, uuid: 48ac743a-2d49-4191-b804-0c7fa7e01146, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ejpevws, ws-headers: {Host: mc.vpshax.ml}}
+  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.66MB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
+  - {name: 🇯🇵 日本-5.36MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
+  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: gcfree.galaxy-cloud.icu, port: 443, type: vmess, uuid: 3f0613b2-fbff-4aa1-8731-3e13f0d6992d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /UAVwoa, ws-headers: {Host: gcfree.galaxy-cloud.icu}}
+  - {name: 🇰🇷 韩国-2.05MB/s(Youtube:不良林), server: jgwcc.356930.xyz, port: 10021, type: vmess, uuid: 6be5af5d-46f2-4a1a-9b89-c174aa7c8835, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: jgwcc.356930.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
